2005-03-19 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/lib/makefile.in: added abs.c and labs.c

2005-03-17 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/include/stdint.h: added
	* device/lib/abs.c: added
	* device/lib/labs.c: added
	* device/include/stdlib.h: added abs() and labs() prototypes
	* device/lib/libsdcc.lib: added abs and labs
	* device/include/float.h,
	* device/lib/_fsmul.c,
	* device/lib/printf_fast.c,
	* device/lib/printf_tiny.c: updated comments

2005-03-16 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCicode.c (geniCodeSwitch, geniCodeJumpTable): fixed
	bug #1164313

2005-03-16 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCcse.c (cseBBlock): retain assignment to self when volatile
	* src/SDCCast.c (isLoopCountable): fixed bug #1161985

2005-03-15 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/lib/printf_large.c: removed inline assembly for portability and
	  readability. Use printf_fast if speed or size are more important.
	* src/pic16/gen.c: removed conditions around use of DEBUGpc
	* src/pic16/genutils.h: added define for DEBUGpc for MSVC

2005-03-15 Vangelis Rokas <vrokas AT users.sourceforge.net>

	* src/pic16/genutils.c (pic16_genCmp_special): initialized offs to
	prevent compiler warning

2005-03-14 Vangelis Rokas <vrokas AT users.sourceforge.net>

	* device/lib/pic16/startup/crt0i.c (_cinit): local variables where
	moved to level 0 and declared as static. Also they are explicit
	placed in access bank. This was necessery because some times they
	might cross memory bank boundaries. crt0iz.c is *NOT* updated!!!
	* src/pic16/device.h: added flag OPTIMIZE_CMP to enable some compare
	optimizations. Currently only compare to unsigned char is implemented,
	* src/pic16/gen.c: added fReturnIdx array,
	* (struct resolvedIfx) is moved to gen.h and made public,
	* (struct _G): added sregsAlloc and sregsAllocSet fields,
	* (aopForSym): added an optimization to directly store in stack of